# Generated by Django 6.0 on 2026-01-21 18:03

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AvailabilityBlock',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('day_of_week', models.PositiveSmallIntegerField(blank=True, null=True)),
                ('specific_date', models.DateField(blank=True, null=True)),
                ('start_time', models.TimeField()),
                ('end_time', models.TimeField()),
                ('availability_type', models.CharField(choices=[('WEEKLY', 'Weekly availability slot'), ('INCLUSION', 'Extra availability slot'), ('EXCLUSION', 'Excluded availability slot')], default='WEEKLY', max_length=20)),
                ('therapist', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='availability_blocks', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'availability block',
                'verbose_name_plural': 'availability blocks',
                'indexes': [models.Index(fields=['therapist', 'day_of_week'], name='scheduling__therapi_0cf11e_idx'), models.Index(fields=['therapist', 'specific_date'], name='scheduling__therapi_fa3d89_idx')],
            },
        ),
    ]
